fix: really use full width on mobile devices

--- a/src/popup/main.css
+++ b/src/popup/main.css
@@ -36,7 +36,7 @@ body {
     padding: 15px;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 400px) {
     html {
         font-size: 1em;
     }
